The update of the environment does not work with jdk 16, fixes #380